fix: spacing when multiple now playing

--- a/public/styles.de5130.css
+++ b/public/styles.de5130.css
@@ -286,6 +286,12 @@
       margin-top: var(--spacing-4);
     }
 
+    ol {
+      > * + * {
+        margin-top: var(--spacing-4);
+      }
+    }
+
     li {
       position: relative;
       padding: var(--spacing-4);
